--- a/code/poa/src/main/resources/application.properties
+++ b/code/poa/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.tomcat.max-active=20
 spring.datasource.tomcat.max-idle=8
 spring.datasource.tomcat.min-idle=8
 spring.datasource.tomcat.initial-size=10
+
+#close thymeleaf cache.
+spring.thymeleaf.cache=false
