--- a/code/poa/package.json
+++ b/code/poa/package.json
@@ -10,6 +10,9 @@
     "devDependencies": {
         "glob": "^7.1.2",
         "webpack": "^4.16.5",
-        "webpack-cli": "^3.1.0"
+        "webpack-cli": "^3.1.0",
+        "eslint": "4.13.0",
+        "eslint-loader": "1.9.0",
+        "eslint-plugin-html": "4.0.1"
     }
 }
