--- a/code/poa/src/main/resources/application.properties
+++ b/code/poa/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.datasource.tomcat.initial-size=10
 #close thymeleaf cache.
 spring.thymeleaf.cache=false
 
+#logging
+logging.level.com.suyuan.poa=DEBUG
+
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
