--- a/code/poa/src/main/resources/application.properties
+++ b/code/poa/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/poa?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/poa?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=shen
 spring.datasource.password=0944
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
